# simple_project

./: CMakeLists.txt
.github/workflows/: c-cpp.yml  much_much_reuse.yml  much_reuse.yml  much_stage.yml  puppet-lint.yml  reuse.yml  sample_test.yml  single_stage.yml
src/: CMakeLists.txt  main.cpp  math_utils.cpp  math_utils.h
test/: CMakeLists.txt  test_math_utils.cpp
